--- a/build.gradle
+++ b/build.gradle
@@ -46,7 +46,7 @@ bintray {
         licenses = ['MIT']
         vcsUrl = 'https://github.com/cryptocurrency-testing/embedded-bitcoind-binaries.git'
         version {
-            name = '0.0.1'
+            name = project.version
         }
     }
 }
