--- a/build.gradle
+++ b/build.gradle
@@ -52,11 +52,14 @@ project(':bitcoind-artifacts') {
 //        task "build${platform.name}Bundle"(group: "build (${platform.name})", type: Exec) {
 //            commandLine 'sh', "/usr/bin/wget", "https://bitcoin.org/bin/bitcoin-core-${bitcoinVersion}/bitcoin-${bitcoinVersion}-${platform.platform}.tar.gz -P bin/ \n"
 //        }
-        task "download${platform.name}Bundle"(type: Download) {
+        task "download${platform.name}Bundle"(group: "build (${platform.name})", type: Download) {
+            inputs.property("bitcoinVersion", bitcoinVersion)
+            inputs.property("platformName", platform.name)
+            outputs.file("bin/bitcoin-${bitcoinVersion}-${platform.platform}.tar.gz")
             src([
                     "https://bitcoin.org/bin/bitcoin-core-${bitcoinVersion}/bitcoin-${bitcoinVersion}-${platform.platform}.tar.gz"
             ])
-            overwrite false
+            overwrite true
             dest file("bin/")
         }
 
@@ -161,7 +164,7 @@ allprojects {
         def publicationName = archive.archiveTask.name - 'Jar'
 
         jar.dependsOn "${archive.archiveTask.name}"
-        test.dependsOn "test${archive.archiveTask.name.capitalize()}"
+        //test.dependsOn "test${archive.archiveTask.name.capitalize()}"
         install.dependsOn "publish${publicationName.capitalize()}PublicationToMavenLocal"
     }
 
