--- a/build.gradle
+++ b/build.gradle
@@ -49,23 +49,31 @@ allprojects {
 
 project(':bitcoind-artifacts') {
     platformReleases.each { platform ->
-//        task "build${platform.name}Bundle"(group: "build (${platform.name})", type: Exec) {
-//            commandLine 'sh', "/usr/bin/wget", "https://bitcoin.org/bin/bitcoin-core-${bitcoinVersion}/bitcoin-${bitcoinVersion}-${platform.platform}.tar.gz -P bin/ \n"
-//        }
         task "download${platform.name}Bundle"(group: "build (${platform.name})", type: Download) {
             inputs.property("bitcoinVersion", bitcoinVersion)
             inputs.property("platformName", platform.name)
-            outputs.file("bin/bitcoin-${bitcoinVersion}-${platform.platform}.tar.gz")
+            outputs.file(project.file("bitcoin-${bitcoinVersion}-${platform.platform}.tar.gz"))
             src([
                     "https://bitcoin.org/bin/bitcoin-core-${bitcoinVersion}/bitcoin-${bitcoinVersion}-${platform.platform}.tar.gz"
             ])
-            overwrite true
-            dest file("bin/")
+            overwrite false
+            dest project.file("./")
         }
+        task "untar${platform.name}Bundle"(group: "build (${platform.name})", type: Copy) {
+            inputs.file(project.file("bitcoin-${bitcoinVersion}-${platform.platform}.tar.gz"))
 
+            dependsOn "download${platform.name}Bundle"
+            from (tarTree(project.file("bitcoin-${bitcoinVersion}-${platform.platform}.tar.gz"))) {
+                include "bitcoin-${bitcoinVersion}/bin/**"
+                eachFile { fcd ->
+                    fcd.relativePath = new RelativePath(true, fcd.relativePath.segments.drop(1))  // (2)
+                }
+                includeEmptyDirs = false  // (3)
+            }
+            into project.file("${platform.name}/").canonicalPath
+        }
         task "${platform.name}Jar"(group: "build (${platform.name})", type: Jar) {
-            from tasks.getByName("download${platform.name}Bundle")
-            //include "bin/bitcoin-${bitcoinVersion}-${platform.platform}.tar.gz"
+            from tasks.getByName("untar${platform.name}Bundle")
             appendix = "${platform.platform}"
         }
 
