split out tasks, deal with specific files

--- a/build.gradle
+++ b/build.gradle
@@ -55,17 +55,29 @@ project(':bitcoind-artifacts') {
             commandLine "../../build-${platform.platform}.sh", "v0.19.0.1-quiet-zmq"
             outputs.dir(file("$buildDir/bitcoin"))
         }
-        task "copy-bin-${platform.name}"(group: "build (${platform.name})", type: Copy) {
+        task "copy-bin-mac"(group: "build (mac", type: Copy) {
             dependsOn "build-${platform.name}"
+            from('$buildDir/bitcoin') {
+                include 'Bitcoin-Core.dmg'
+            }
+            into "$buildDir/mac"
+        }
+        task "build-jar-mac"(group: "build (mac)", type: Jar) {
+            dependsOn "copy-bin-mac"
+            from file("$buildDir/mac")
+            appendix = "osx64"
+        }
+        task "copy-bin-linux"(group: "build (linux)", type: Copy) {
+            dependsOn "build-linux"
             from('$buildDir/bitcoin') {
                 include 'src/bitcoind'
             }
             into "$buildDir/${platform.name}"
         }
-        task "build-jar-${platform.name}"(group: "build (${platform.name})", type: Jar) {
-            dependsOn "copy-bin-${platform.name}"
-            from file("$buildDir/${platform.name}")
-            appendix = "${platform.platform}"
+        task "build-jar-linux"(group: "build (linux)", type: Jar) {
+            dependsOn "copy-bin-linux"
+            from file("$buildDir/linux")
+            appendix = "x86_64-linux-gnu"
         }
 
         artifacts.add('bundles', tasks.getByName("build-jar-${platform.name}"))
