--- a/build.gradle
+++ b/build.gradle
@@ -54,6 +54,20 @@ project(':bitcoind-artifacts') {
         commandLine "../../build-x86_64-linux-gnu.sh", "v0.19.0.1-quiet-zmq"
         outputs.dir(file("$buildDir/bitcoin"))
     }
+    task "copy-bin-linux"(group: "build (linux)", type: Copy) {
+        dependsOn "build-linux"
+        from('$buildDir/bitcoin') {
+            include 'src/bitcoind'
+        }
+        into "$buildDir/linux"
+        outputs.dir(file("$buildDir/linux/bitcoind"))
+    }
+    task "build-jar-linux"(group: "build (linux)", type: Jar) {
+        dependsOn "copy-bin-linux"
+        from file("$buildDir/linux")
+        appendix = "x86_64-linux-gnu"
+    }
+
     task "build-mac"(group: "build (mac)", type: Exec) {
         workingDir "$buildDir"
         executable "../../build-osx64.sh"
@@ -62,29 +76,17 @@ project(':bitcoind-artifacts') {
     }
     task "copy-bin-mac"(group: "build (mac)", type: Copy) {
         dependsOn "build-mac"
-        from('$buildDir/bitcoin') {
+        from("$buildDir/bitcoin") {
             include 'Bitcoin-Core.dmg'
         }
         into "$buildDir/mac"
+        outputs.dir(file("$buildDir/mac/Bitcoin-Core.dmg"))
     }
     task "build-jar-mac"(group: "build (mac)", type: Jar) {
         dependsOn "copy-bin-mac"
         from file("$buildDir/mac")
         appendix = "osx64"
     }
-    task "copy-bin-linux"(group: "build (linux)", type: Copy) {
-        dependsOn "build-linux"
-        from('$buildDir/bitcoin') {
-            include 'src/bitcoind'
-        }
-        into "$buildDir/linux"
-    }
-    task "build-jar-linux"(group: "build (linux)", type: Jar) {
-        dependsOn "copy-bin-linux"
-        from file("$buildDir/linux")
-        appendix = "x86_64-linux-gnu"
-    }
-
     artifacts.add('bundles', tasks.getByName("build-jar-mac"))
     artifacts.add('bundles', tasks.getByName("build-jar-linux"))
 }
