--- a/build.gradle
+++ b/build.gradle
@@ -59,12 +59,12 @@ project(':bitcoind-artifacts') {
         from('$buildDir/bitcoin') {
             include 'src/bitcoind'
         }
-        into "$buildDir/linux"
-        outputs.dir(file("$buildDir/linux/bitcoind"))
+        into "$buildDir/x86_64-linux-gnu"
+        outputs.dir(file("$buildDir/x86_64-linux-gnu/bitcoind"))
     }
     task "build-jar-linux"(group: "build (linux)", type: Jar) {
         dependsOn "copy-bin-linux"
-        from file("$buildDir/linux")
+        from file("$buildDir/x86_64-linux-gnu")
         appendix = "x86_64-linux-gnu"
     }
 
@@ -77,14 +77,13 @@ project(':bitcoind-artifacts') {
     task "copy-bin-mac"(group: "build (mac)", type: Copy) {
         dependsOn "build-mac"
         from("$buildDir/bitcoin") {
-            include 'Bitcoin-Core.dmg'
+            include 'src/bitcoind'
         }
-        into "$buildDir/mac"
-        outputs.file("$buildDir/mac/Bitcoin-Core.dmg")
+        into "$buildDir/osx64"
     }
     task "build-jar-mac"(group: "build (mac)", type: Jar) {
         dependsOn "copy-bin-mac"
-        from file("$buildDir/mac")
+        from file("$buildDir/osx64")
         appendix = "osx64"
     }
     artifacts.add('bundles', tasks.getByName("build-jar-mac"))
