--- a/build.gradle
+++ b/build.gradle
@@ -29,7 +29,6 @@ allprojects {
     apply plugin: 'java'
     //apply plugin: 'maven'
     apply plugin: 'maven-publish'
-    apply plugin: 'com.jfrog.bintray'
     apply plugin: 'signing'
 
     group 'com.github.cryptocurrency-testing'
@@ -83,6 +82,7 @@ project(':bitcoind-artifacts') {
 }
 
 subprojects {
+    apply plugin: 'maven-publish'
     task sourcesJar(type: Jar, dependsOn: classes) {
         from sourceSets.main.allSource
         classifier = 'sources'
@@ -94,6 +94,17 @@ subprojects {
     }
 
     publishing {
+        repositories {
+            maven {
+                name = "OSSRH"
+                url = "https://s01.oss.sonatype.org/service/local/staging/deploy/maven2/"
+
+                credentials {
+                    username = project.hasProperty('maven.username') ? project.property('maven.username') : System.getenv('MAVEN_USERNAME')
+                    password = project.hasProperty('maven.password') ? project.property('maven.password') : System.getenv('MAVEN_PASSWORD')
+                }
+            }
+        }
         publications {
             configurations.bundles.artifacts.all { archive ->
                 def publicationName = archive.archiveTask.name - 'Jar'
@@ -160,7 +171,7 @@ signing {
 }
 allprojects {
 
-    bintray {
+//    bintray {
 //        user = project.hasProperty('bintray.user') ? project.property('bintray.user') : System.getenv('BINTRAY_USER')
 //        key = project.hasProperty('bintray.apiKey') ? project.property('bintray.apiKey') : System.getenv('BINTRAY_API_KEY')
 //        publications = project.publishing.publications.findAll().collect { it.name }
@@ -179,13 +190,13 @@ allprojects {
 //                }
 //            }
 //        }
-    }
+//    }
 
     task install(group: 'publishing') {}
 
     configurations.bundles.artifacts.all { archive ->
         def publicationName = archive.archiveTask.name - 'Jar'
-
+        println("configurations.bundles.artifacts.all - looking at $publicationName")
         jar.dependsOn "${archive.archiveTask.name}"
         //test.dependsOn "test${archive.archiveTask.name.capitalize()}"
         install.dependsOn "publish${publicationName.capitalize()}PublicationToMavenLocal"
