--- a/build.gradle
+++ b/build.gradle
@@ -128,6 +128,9 @@ subprojects {
                 }
             }
         }
+        signing {
+            sign publishing.publications
+        }
     }
 }
 
